--- a/style.css
+++ b/style.css
@@ -15,6 +15,33 @@ form {
 	background-color: lightgrey;
 }
 
+table {
+	border-collapse: collapse;
+	border: 2px solid rgb(140 140 140);
+	font-family: sans-serif;
+	letter-spacing: 1px;
+}
+
+thead,
+tfoot {
+	background-color: rgb(228 240 245);
+}
+
+th,
+td {
+	border: 1px solid rgb(160 160 160);
+	padding: 8px 10px;
+}
+
+td:last-of-type,
+td:first-of-type {
+	text-align: center;
+}
+
+tbody > tr:nth-of-type(even) {
+	background-color: rgb(237 238 242);
+}
+
 .flex-column {
 	display: flex;
 	flex-direction: column;
